fix(table): correctly align select-all checkbox in low density mode

--- a/src/components/table/partial-styles/_row-selection.scss
+++ b/src/components/table/partial-styles/_row-selection.scss
@@ -21,6 +21,10 @@
 
     limel-checkbox {
         transform: translate(-0.25rem, 0);
+
+        :host(.has-low-density) & {
+            transform: translate(-0.15rem, 0);
+        }
     }
 }
 
